This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
5/6/18: Fix crash when reading in settings with one-line script.

5/6/18: Try to leave low dose mode when crashing.

5/6/18: Added script commands to load a map.

5/6/18: Made autofocus abort if too many iterations measure a defocus near
zero, and if there are too many iterations where the change was not limited.

5/6/18: Made Montage Prescan not increase the binning by more than 2 for some
CMOS cameras with fast readouts (direct detectors, OneView, Ceta), and made it
not drop the exposure time so much in low dose mode by allowing counts to
increase up to 4-fold.

4/27/18: Multiple reciords can now be taken from multiple holes as well as
from multiple positions in a hole.

4/27/18: Added script commands to load a map and added option to adjust note
on a new map.

4/27/18: Modified polygon used to get full montage to avoid loss of corner
pieces due to coordinates out of range.

4/27/18: Fixed failure to clear existing summed frame list when reading in new
settings file (In 3.6).

4/26/18: SEM_3-6-16
4/18/18: Added property to set minimum spot size to use.

4/12/18: Fixed uninitialized pointer causing crash when aligning with K2.

4/10/18: Raised scope update interval to 150 ms and made vacuum update happen
every ~1.7 sec (In 3.6).

4/10/18: Changes to support Z stage movement for Hitachi HT7800 (In 3.6).

3/29/18: Added name of STEM detector to image display if there is more than
one detector.

3/28/18: If a low dose map is used for anchor state, new anchor map will be
taken in low dose mode too, instead of just matching parameters (In 3.6).

3/28/18: Added ability to run a script after each acquisition in acquire at
items.

3/28/18: Added long operations for filling nitrogen or flashing FEG on
JEOL CryoARM.
