@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+5/11/18: Stopped turning on "very sloppy" option for stage montages (In 3.6).
+
 5/6/18: Fix crash when reading in settings with one-line script.
 
 5/6/18: Try to leave low dose mode when crashing.
